added robot section with images and lorem info

--- a/index.html
+++ b/index.html
@@ -26,23 +26,88 @@
             <p>Committed to creating a prosperous future where we and robots can co-exist in harmony.</p>
           </div>
         </div>
-        <figure>
+        <!-- TODO: position and get link to credit photograph -->
+        <!-- <figure>
           <figcaption>Photo by Jeremy Bishop on Unsplash</figcaption>
-        </figure>
+        </figure> -->
       </section>
+
       <section id="portfolio">
         <h3>The Robotics Impact on the health and Science Industries</h3>
         <p>Robots improving speed, accuracy and efficacy of vaccines, surgeries and data analyitics.</p>
         <div class="projects">
-          <!-- TODO: Put cards / images here.... -->
+
+          <div class="project">
+            <figure>
+              <img src="./images/alex-knight-2EJCSULRwC8-unsplash.jpg" alt="cute human-like robot">
+              <figcaption> Photo by <a href="https://unsplash.com/@agk42?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Alex Knight</a> on <a href="https://unsplash.com/s/photos/bio-robots?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
+            </figure>
+            <div class="project-info">
+              <p class="project-name">QT-D2</p>
+              <p class="project-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum vitae sequi in? Soluta nulla ipsa exercitationem laborum eos, vitae nemo sit temporibus nobis dolor excepturi veritatis, labore unde! Officia, magnam.</p>
+            </div>
+          </div>
+
+          <div class="project">
+            <figure>
+              <img src="./images/jaron-nix-7wWRXewYCH4-unsplash.jpg" alt="scientist using a microscope to examine a specimen">
+              <figcaption> Photo by <a href="https://unsplash.com/@jaronnix?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jaron Nix</a> on <a href="https://unsplash.com/s/photos/health-robots?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
+            </figure>
+            <div class="project-info">
+              <p class="project-name">BioTech Analysis</p>
+              <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt voluptatem reprehenderit beatae qui. Laudantium ea architecto corporis iusto, tenetur, suscipit perferendis inventore error natus laboriosam aliquid, reiciendis eos repellat soluta.</p>
+            </div>
+          </div>
+
+          <div class="project">
+            <figure>
+              <img src="./images/maximalfocus-B2OV_nwcbxM-unsplash.jpg" alt="robot maxi - 1st prototype robot">
+              <figcaption> Photo by <a href="https://unsplash.com/@maximalfocus?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Maximalfocus</a> on <a href="https://unsplash.com/s/photos/bio-robots?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
+            </figure>
+            <div class="project-info">
+              <p class="project-name">Maximalfocus - Prototype #1</p>
+              <p class="project-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam unde aspernatur deserunt porro obcaecati dolor pariatur nisi iure animi, voluptatem doloremque deleniti qui beatae dolores at quaerat, earum ducimus? Impedit.</p>
+            </div>
+          </div>
+
+          <div class="project">
+            <figure>
+              <img src="./images/david-leveque-GpNOhig3LSU-unsplash.jpg" alt="our robot barista in the cafe">
+              <figcaption> Photo by <a href="https://unsplash.com/@davidleveque?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">David Levêque</a> on <a href="https://unsplash.com/s/photos/robot?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
+            </figure>
+            <div class="project-info">
+              <p class="project-name">Robo Cafe</p>
+              <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis alias minima accusantium facilis nemo impedit ut adipisci ipsa ipsum, quidem, ullam possimus dolore corrupti laudantium ipsam rerum. Sint, velit assumenda.</p>
+            </div>
+          </div>
+
+          <div class="project">
+            <figure>
+              <img class="image-position-top" src="./images/nice-m-nshuti-cTqxDBsEv3g-unsplash.jpg" alt="C3PO">
+              <figcaption> Photo by <a href="https://unsplash.com/@nietzsche99?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nice M Nshuti</a> on <a href="https://unsplash.com/s/photos/robot?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
+            </figure>
+            <div class="project-info">
+              <p class="project-name">
+                C3-PO <br/>
+                Our inspiration!
+              </p>
+              <p class="project-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis alias minima accusantium facilis nemo impedit ut adipisci ipsa ipsum, quidem, ullam possimus dolore corrupti laudantium ipsam rerum. Sint, velit assumenda.</p>
+            </div>
+          </div>
+
         </div>
       </section>
+
       <section id="team">
         <h3>Meet the team who makes it possible!</h3>
         <div class="team-card">
-          <!-- <img src="" alt=""> -->
+          <!-- <figure>
+            <img src="./images/usman-yousaf-5D3SQkXKNhk-unsplash.jpg" alt="dr. usman yousaf pointing to the right">
+            <figcaption> Photo by <a href="https://unsplash.com/@usmanyousaf?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Usman Yousaf</a> on <a href="https://unsplash.com/s/photos/health-robots?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
+          </figure> -->
           <!-- <p class="team-member-name"></p> -->
           <!-- <p class="position"></p> -->
+  
         </div>
       </section>
     </main>
