added team photos

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
               <figcaption> Photo by <a href="https://unsplash.com/@maximalfocus?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Maximalfocus</a> on <a href="https://unsplash.com/s/photos/bio-robots?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
             </figure>
             <div class="project-info">
-              <p class="project-name">Maximalfocus - Prototype #1</p>
+              <p class="project-name">
+                Maximalfocus <br/> 
+                Prototype #1
+              </p>
               <p class="project-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam unde aspernatur deserunt porro obcaecati dolor pariatur nisi iure animi, voluptatem doloremque deleniti qui beatae dolores at quaerat, earum ducimus? Impedit.</p>
             </div>
           </div>
@@ -100,14 +103,32 @@
 
       <section id="team">
         <h3>Meet the team who makes it possible!</h3>
+
         <div class="team-card">
-          <!-- <figure>
-            <img src="./images/usman-yousaf-5D3SQkXKNhk-unsplash.jpg" alt="dr. usman yousaf pointing to the right">
+          <figure>
+            <img src="./images/ayo-ogunseinde-sibVwORYqs0-unsplash.jpg" alt="Ayo - our C# expert">
+            <figcaption> Photo by <a href="https://unsplash.com/@armedshutter?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ayo Ogunseinde</a> on <a href="https://unsplash.com/s/photos/people?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
+          </figure>
+          <p class="team-member-name">Alexander</p>
+          <p class="position">C# Guru - I make everything work</p>
+        </div>
+
+        <div class="team-card">
+          <figure>
+            <img src="./images/marivi-pazos-cvpk5Y4ZWUs-unsplash.jpg" alt="Jess - our UX designer">
+            <figcaption> Photo by <a href="https://unsplash.com/@marivi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Marivi Pazos</a> on <a href="https://unsplash.com/s/photos/people?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
+          </figure>
+          <p class="team-member-name">Jess</p>
+          <p class="position">UX / UI / I make things look awesome</p>
+        </div>
+
+        <div class="team-card">
+          <figure>
+            <img src="./images/usman-yousaf-5D3SQkXKNhk-unsplash.jpg" alt="Yonni - our CEO">
             <figcaption> Photo by <a href="https://unsplash.com/@usmanyousaf?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Usman Yousaf</a> on <a href="https://unsplash.com/s/photos/health-robots?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
-          </figure> -->
-          <!-- <p class="team-member-name"></p> -->
-          <!-- <p class="position"></p> -->
-  
+          </figure>
+          <p class="team-member-name">Yonni</p>
+          <p class="position">CEO - I'm here to help Jess and Alexander succeed</p>
         </div>
       </section>
     </main>
