team bios added

--- a/index.html
+++ b/index.html
@@ -109,8 +109,11 @@
             <img src="./images/ayo-ogunseinde-sibVwORYqs0-unsplash.jpg" alt="Ayo - our C# expert">
             <figcaption> Photo by <a href="https://unsplash.com/@armedshutter?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Ayo Ogunseinde</a> on <a href="https://unsplash.com/s/photos/people?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
           </figure>
-          <p class="team-member-name">Alexander</p>
-          <p class="position">C# Guru - I make everything work</p>
+          <div class="team-member-info">
+            <p class="team-member-name">Alexander</p>
+            <p class="position">C# Guru - I make everything work</p>
+            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta molestias incidunt, vero porro nam dignissimos neque natus quis fuga laborum voluptates, ea id esse, illum labore. Numquam dolore velit iste!</p>
+          </div>
         </div>
 
         <div class="team-card">
@@ -118,8 +121,11 @@
             <img src="./images/marivi-pazos-cvpk5Y4ZWUs-unsplash.jpg" alt="Jess - our UX designer">
             <figcaption> Photo by <a href="https://unsplash.com/@marivi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Marivi Pazos</a> on <a href="https://unsplash.com/s/photos/people?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
           </figure>
-          <p class="team-member-name">Jess</p>
-          <p class="position">UX / UI / I make things look awesome</p>
+          <div class="team-member-info">
+            <p class="team-member-name">Jess</p>
+            <p class="position">UX / UI / I make things look awesome</p>
+            <p class="info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus reprehenderit aperiam magni molestiae quo non consequatur dignissimos, ut excepturi enim officiis laborum tempora culpa est, necessitatibus sed, modi rerum? Inventore.</p>
+          </div>
         </div>
 
         <div class="team-card">
@@ -127,9 +133,13 @@
             <img src="./images/usman-yousaf-5D3SQkXKNhk-unsplash.jpg" alt="Yonni - our CEO">
             <figcaption> Photo by <a href="https://unsplash.com/@usmanyousaf?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Usman Yousaf</a> on <a href="https://unsplash.com/s/photos/health-robots?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> </figcaption>
           </figure>
-          <p class="team-member-name">Yonni</p>
-          <p class="position">CEO - I'm here to help Jess and Alexander succeed</p>
+          <div class="team-member-info">
+            <p class="team-member-name">Yonni</p>
+            <p class="position">CEO - I'm here to help Jess and Alexander succeed</p>
+            <p class="info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam sed magni iste, quibusdam molestias aperiam quo, quis quod sit obcaecati quos eum minima consequatur deserunt quidem! Nobis repudiandae illo dolorem.</p>
+          </div>
         </div>
+
       </section>
     </main>
     <footer>
@@ -138,8 +148,8 @@
         <address>
           <p>bioRobotics@BioScienceRobos.org</p>
           <p>555-555-55555</p>
+          <p id="copyright">copyright BioRobotics 2022</p>
         </address>
-        <p>copyright BioRobotics 2022</p>
       </div>
     </footer>
   </body>
