--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html lang="en" class="notranslate">
+<!DOCTYPE html>
 
-<html>
+<html lang="en" translate="no">
   <head>
+    <meta name="google" content="notranslate">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
   </head>
