--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en" translate="no">
   <head>
     <meta name="google" content="notranslate">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles.css">
   </head>
