fix: spelling mistak on banner corrected

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <section id="mission">
         <div class="banner">
           <div class="section-content">
-            <h2>Rotobics for Health and Sciences</h2>
+            <h2>Robotics for Health and Sciences</h2>
             <p>Committed to creating a prosperous future where we and robots can co-exist in harmony.</p>
           </div>
         </div>
